# auto_antenna_control

./: .gitignore  .gitmodules  AntennaControl.odp  Makefile  README.md  install_tic.sh  progress.md  readme.md  tic.cpp
data/u20/oneeight/: data8000000.csv
data/u20/onehalf/: data8000000.csv
data/u5/onehalf/: data4000000.csv
include/auto_antenna_control/: predictor_lib.hpp  tic_lib.hpp
modelling/: predict_position.ipynb  predict_position.py  train.py
pictures/videos/: Screencast from 24-04-24 06:50:31 AM IST.webm  Screencast from 24-04-24 06:52:14 AM IST.webm
src/: move_in_sine.cpp  predictor.cpp  predictor_node.cpp  tic.cpp  tic_lib.cpp
workspace/: plot_positions.py  predict_position.ipynb
workspace/data/elevation_motor/u20/onefourth/: data4000000.csv
workspace/data/elevation_motor/u5/onefourth/: data4000000.csv
workspace/data/first_motor/u20/onehalf/: data2000000.csv
workspace/data/rosbags/: 2024-04-19-01-16-33.bag  direct_2024-04-11-23-52-46.bag  predictor_2024-04-11-23-50-58.bag
workspace/data/u20/oneeight/: data2000000.csv  data4000000.csv
workspace/data/u20/onefourth/: data2000000.csv  data4000000.csv  data8000000.csv
workspace/data/u20/onehalf/: data4000000.csv
workspace/data/u5/oneeight/: data4000000.csv
workspace/data/u5/onefourth/: data4000000.csv
workspace/src/antenna_control/: CMakeLists.txt  package.xml
workspace/src/antenna_control/config/: default.yaml  motor_phi.yaml  motor_theta.yaml
workspace/src/antenna_control/include/: tic_lib.hpp
workspace/src/antenna_control/include/antenna_control/: motor_control.hpp  predictor_lib.hpp  tic_lib.hpp
workspace/src/antenna_control/launch/: mocap.launch  motor_launch.launch  motor_test.launch  motors.launch
workspace/src/antenna_control/src/: antenna_pose_node.cpp  fc_pose_node.cpp  init_node.cpp  motor_control.cpp  motor_control_no_pred_node.cpp  motor_control_node.cpp  motor_pose_node.cpp  pose_node.cpp  predictor_lib.cpp  tic_collect_data.cpp  tic_collect_data_node.cpp  tic_goto_position.cpp  tic_lib.cpp
workspace/src/antenna_control/test/: predictor_lib_test.cpp
workspace/src/initialization/: CMakeLists.txt  package.xml
workspace/src/initialization/launch/: initialization.launch
workspace/src/initialization/src/: init_node.cpp
workspace/src/messages/: CMakeLists.txt  package.xml
workspace/src/messages/config/: drone_sim.yaml
workspace/src/messages/msg/: MotorPose.msg  SphericalPose.msg
workspace/src/odom_estimate/: CMakeLists.txt  package.xml
workspace/src/odom_estimate/config/: predictor.yaml
workspace/src/odom_estimate/include/: predictor_lib.hpp
workspace/src/odom_estimate/include/odom_estimate/: predictor_lib.hpp
workspace/src/odom_estimate/launch/: divine_plan.launch  uav_pose_predictor.launch
workspace/src/odom_estimate/src/: predictor_lib.cpp  predictor_node.cpp  uav_pose_predictor_node.cpp
workspace/src/odom_simulate/: CMakeLists.txt  package.xml
workspace/src/odom_simulate/config/: drone_sim.yaml
workspace/src/odom_simulate/src/: angle_sim_node.cpp  drone_sim_node.cpp  motor_pose_sim.cpp  sim_drone_node.cpp
workspace/src/visualize/: CMakeLists.txt  package.xml
workspace/src/visualize/src/: motor_pose_sim.cpp  sfml_drone_pose.cpp  sfml_motor_pose.cpp
